=== Opus Primus changelog.txt ===
Last revised March 31, 2015
Please note, the Opus Primus copyright can be found at the end of this file.

= Version 1.4 =
* Released ...

= Code =
* Added `widgets` to the HTML5 theme supported items
* Change `OpusPrimusStructures` to a singleton style class
* Change `OpusPrimusComments` to a singleton style class
* Moved the `support_comment` method back into the `OpusPrimusStructures` class
* Removed `$screen` parameter as not necessary in Taglines Stanza

= CSS =
* Adjusted CSS to not reference `li` elements in default widget styles

= Miscellaneous =
* Continue removal of extraneous end of structure comments ...

/** ------------------------------------------------------------------------- */
= Version 1.3.4 =
* Released March 2015

= Code =
* Used a more specific element identifier for the SlickNav `prependTo` parameter

= Miscellaneous =
* Continue removal of extraneous end of structure comments ...

/** ------------------------------------------------------------------------- */
= Version 1.3.3 =
* Released March 2015
* Added sanity checks to ensure there is actually an image in use when returning the featured image view.

/** ------------------------------------------------------------------------- */
= Version 1.3.2 =
* Released March 2015
* Added support for the `title` tag via `add_theme_support` function

/** ------------------------------------------------------------------------- */
= Version 1.3.1 =
* Released March 2015

= Code =
* Added `get_the_posts_pagination` for navigation between pages of posts
* Added `hide_category_widget_list_items` method and related hook
* Added some escaping sanitization and linked Featured Image to post via the post ID
* Changed method to return the Featured Thumbnail versus outputting it
* Changed from using `get_the_time` to `date_i18n` for `OpusPrimusImages::exif_timestamp` method
* Extracted code from `featured_thumbnail` method to create `featured_thumbnail_single_view` method