@@ -9,6 +9,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `widgets` to the HTML5 theme supported items
 * Change `OpusPrimusStructures` to a singleton style class
 * Change `OpusPrimusComments` to a singleton style class
+* Ensure `$pagination` has been initialized in `OpusPrimusNavigation::pagination` method
 * Moved the `support_comment` method back into the `OpusPrimusStructures` class
 * Removed `$screen` parameter as not necessary in Taglines Stanza
 
